# fanuc_robot_descriptions

./: .gitattributes  CMakeLists.txt  package.xml
config/arc_mate_100id/: joint_limits.yaml
config/arc_mate_100id_8l/: joint_limits.yaml
config/arc_mate_120ib_10l/: joint_limits.yaml
config/arc_mate_120ic/: joint_limits.yaml
config/arc_mate_120ic_12l/: joint_limits.yaml
config/arc_mate_120id_12l/: joint_limits.yaml
config/arc_mate_120id_35/: joint_limits.yaml
launch/: view_robot.launch.py
rviz/: view_robot.rviz
scripts/: setup-git-filters.sh
urdf/: arc_mate_100id.urdf.xacro  arc_mate_100id_8l.urdf.xacro  arc_mate_100id_8l_macro.xacro  arc_mate_100id_macro.xacro  arc_mate_120ib.urdf.xacro  arc_mate_120ib_10l.urdf.xacro  arc_mate_120ib_10l_macro.xacro  arc_mate_120ib_macro.xacro  arc_mate_120ic.urdf.xacro  arc_mate_120ic_12l.urdf.xacro  arc_mate_120ic_12l_macro.xacro  arc_mate_120ic_macro.xacro  arc_mate_120id_12l.urdf.xacro  arc_mate_120id_12l_macro.xacro  arc_mate_120id_35.urdf.xacro  arc_mate_120id_35_macro.xacro  cr_15ia.urdf.xacro  cr_15ia_macro.xacro  cr_35ia.urdf.xacro  cr_35ia_macro.xacro  cr_35ib.urdf.xacro  cr_35ib_macro.xacro  cr_7ia_l.urdf.xacro  cr_7ia_l_macro.xacro  crx_10ia.urdf.xacro  crx_10ia_l.urdf.xacro  crx_10ia_l_macro.xacro  crx_10ia_macro.xacro  crx_20ia_l.urdf.xacro  crx_20ia_l_macro.xacro  crx_25ia.urdf.xacro  crx_25ia_macro.xacro  crx_30ia.urdf.xacro  crx_30ia_macro.xacro  crx_5ia.urdf.xacro  crx_5ia_macro.xacro  lr_10ia_10.urdf.xacro  lr_10ia_10_macro.xacro  lr_mate_200ic.urdf.xacro  lr_mate_200ic_5h.urdf.xacro  (+182 more)
(+1595 files in other folders)
