<?xml version="1.0"?>
<package format="3">
  <name>fanuc_robot_descriptions</name>
  <version>1.0.0</version>
  <description>RoboDK-derived URDF/xacro descriptions (geometry + kinematics).</description>
  <maintainer email="sshaizkhan@gmail.com">sshaizkhan</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
